--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
         <h1>Movie App</h1>
         <input type="text" id="search-input" placeholder="enter name here"/>
         <button id="button">search</button>
-        <div class="movies">
-        </div>
-        <ul  id="data-list"></ul>
+        <div class="movies"></div>
     </div>
     
     
